--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
             My love for you is boundless, like an endless horizon where the earth meets the sky. It is as vast as the universe and as eternal as time itself. With you, I have found a love that feels like home—a love that is safe, pure, and unshakable.
           </p>
           <p class="romantic-font message shake">
-            So, my darling, I ask you with all the love in my heart: Will you walk this beautiful journey of life with me? Will you be my partner, my confidant, my forever? Will you make me the happiest person alive by saying yes to a lifetime of love, laughter, and endless adventures together?
-          </p>
-          <p class="romantic-font message shake">
-            You are my everything, and I am forever yours.
+            This is not a <span style="font-size: 26px;">love letter </span>, nor a <span style="font-size: 26px;">grand proposal... just a whisper from my heart to yours. From the moment our paths crossed, my soul has danced to the rhythm of your presence. You are a masterpiece, painted in the colors of grace and light. So, keep smiling—your smile is the sun that brightens my darkest days. And know this: there is someone who dreams of nothing more than to see your radiant glow, every single day.
           </p>
           <p class="roamtic-font message shake" style="font-size: 26px;">
             With all my love, <br>
